# evographs

./: .gitignore  README.md  pyproject.toml
evographs/: __init__.py  __main__.py  graph.py  moran_model.py  moran_modelv2.py  moranmodel.py  moranmodelv2.py  simulation_wrapper.py  visualisation.py
evographs_core/: __init__.py  evograph.py  graph.py  graph_structure.py  moranmodel.py  moranmodelv2.py
evographs_core/graph/: _utils.py  graph.py  visualisation.py
evographs_core/moran_process/: moran_model.py
tests/: test_graph.py  test_visualisation.py
